--- a/GitHub-user-search-app/my-app/src/components/Search/Search.css
+++ b/GitHub-user-search-app/my-app/src/components/Search/Search.css
@@ -10,8 +10,15 @@ form {
     display: flex;
     justify-content: space-between;
 }
+
+.white-content form {
+    background-color: #fff;
+    color: #1f2a48;
+    
+}
+
 form > input[type="search"], input[type="search"]:focus, input[type="search"]::placeholder {
-    border: 0 none;
+    border:  none;
     outline: 0;
     background-color: #1f2a48;
     padding: 15px 30px 15px 5px;
@@ -21,3 +28,13 @@ form > input[type="search"], input[type="search"]:focus, input[type="search"]::p
     font-size: 14px;
 }
 
+.white-content form > input[type="search"], .white-content input[type="search"]:focus, .white-content input[type="search"]::placeholder {
+    border: 0 none;
+    outline: 0;
+    background-color: #fff;
+    padding: 15px 30px 15px 5px;
+    flex-grow: 1;
+    color: #1f2a48;
+    font-family: monospace;
+    font-size: 14px;
+}
